--- a/public/index.html
+++ b/public/index.html
@@ -178,7 +178,7 @@ document.getElementById('slideForwardBottom').addEventListener('mouseleave', sto
       <p>
         <i>[…] Todo arte, toda filosofía pueden ser considerados como medios al mismo tiempo saludables y auxiliares al servicio de la vida en crecimiento, en lucha; presuponen siempre sufrimientos, seres que sufren. Pero hay dos clases de seres que sufren: los que sufren por su abundancia de vida, que desean un arte dionisíaco y que tienen asimismo una visión y una comprensión trágicas de la vida; y aquellos que sufren por su empobrecimiento de vida, que buscan en el arte y en el conocimiento el descanso, el silencio, el mar en calma, la entrega personal o, por el contrario, la borrachera, la crispación, el estupor, el delirio. […] El ser más rico en abundancia vital, el dios y el hombre dionisíacos pueden permitirse no solo ver lo terrible y problemático, sino también cometer incluso una acción terrible y entregarse a todo lujo de destrucciones, descomposiciones y negaciones; para ellos, el mal, el absurdo y la fealdad horrible están, por así decirlo, permitidos, en virtud de un excedente de fuerzas generadoras y fecundas, capaces de convertir cualquier desierto en un país fértil. </i> <br>
 Friedrich Nietzsche, <i>La Gaya Ciencia </i> <br> (1)
-
+<br>
 <br>No se hace arquitectura para satisfacer un servicio, ni para brindar una solución, ni para resolver un problema, ni para implementar un mejoramiento. Tampoco para expresar la individualidad de un autor, ni el <i>espíritu del tiempo</i> o las mejores intenciones de una época, ni tampoco para transmitir un mensaje, para esperanzar, para articular una política, o para alojar una u otra forma de funcionamiento o institución. Aunque la arquitectura se vale de todos esos fines como motores o impulsores, es importante comprenderlos como los medios necesarios para su incesante y perpetuamente inacabada constitución. La arquitectura es un arte de la actividad, un arte del empoderamiento del azar capaz de llamar a cualquier contingencia, a cualquier requisito, en definitiva, a cualquier determinación interna como externa, su <i>así lo he querido</i> (2).  Esa es la apuesta ante la que la arquitectura se encuentra cada vez, su sufrimiento dionisíaco, tan detestado como inevitable. <br>
 
 <br>El arquitecto no es más que un <i>médium</i>, y la arquitectura, aunque <i>primera de las artes</i> (3), es la menos estetizable (el <i>gusto</i> es descubierto cada vez en las cosas, y no impuesto a ellas), y la más impersonal, porque no requiere de impulsos, ni de intenciones, ni de deseos, ni de traumas, ni de biografías interesantes para constituir voluntades salvajes y crear nuevas formas de valor. Los materiales y las técnicas con los que se hace arquitectura son descubiertos cada vez: arte de la incertidumbre, de la cuerda floja, del paseo lento y meditativo. La figura del cliente es el modo en el que la arquitectura proyecta su doble, su forma de construir tensión con la realidad, sin apatía, sin cinismo, pero sobre todo sin refugiarse en torres de marfil, ni alzar el grito nihilista de las almas bellas, afianzándose en ilusiones de integridad, en aparentes bienaventuranzas que no son más que anestesias pasajeras para la mala conciencia. <br>
@@ -204,13 +204,15 @@ Friedrich Nietzsche, <i>La Gaya Ciencia </i> <br> (1)
 </p>
       <br>
       <br>
+      <p><u>Notas</u></p>
+      <br>
       <p>1.Nietzsche, Friedrich. La Gaya Ciencia. Editorial Akal, 2014
-<br>2.Los dados lanzados una vez son la afirmación del azar, la combinación que forman al caer es la afirmación de la necesidad. La necesidad se afirma en el azar, en el sentido exacto en que el ser se afirma en el devenir y lo uno en lo múltiple. Inútilmente se dirá que, lanzados al azar, los dados no producen necesariamente la combinación victoriosa, el doble seis que trae consigo una nueva tirada. Es cierto, pero sólo en la medida en que el jugador no ha sabido primero afirmar el azar. Porque, así́ como lo uno no suprime ni niega lo múltiple, la necesidad no suprime ni abole el azar. Nietzsche identifica el azar con lo múltiple, con los fragmentos, con los miembros, con el caos: caos de los dados que chocan y se lanzan.  Nietzsche hace del azar una afirmación. Deleuze, Gilles. Nietzsche y la Filosofía. Editorial Anagrama, Barcelona, 1998
-<br>3.El arte no empieza con la carne, sino con la casa; por este motivo la arquitectura es la primera de las artes. Deleuze, Gilles y Guattari, Félix. ¿Qué es la Filosofía? Editorial Anagrama, Barcelona, 1997
-<br>4.In every modernity and every novelty, you find conformity and creativity; an insipid conformity, but also "a little new music"; something in conformity with the time, but also something untimely—separating the one from the other is the task of those who know how to love, the real destroyers and creators of our day. Good destruction requires love. Deleuze, Gilles. “On Nietzsche and the Image of Thought”. Desert Islands and Other Texts. 1953-1974. Semiotext(e). 2004  
-<br>5.(…) el modo de liberarme que utilizaba en aquella época consistía, según creo, en concebir la historia de la filosofía como una especie de sodomía (N. del A.: enculer en el original, buggering en inglés) o, dicho de otra manera, de inmaculada concepción. Me imaginaba acercándome a un autor por la espalda y dejándole embarazado de una criatura que, siendo suya, sería sin embargo monstruosa. Era muy importante que el hijo fuera suyo, pues era preciso que el autor dijese efectivamente todo aquello que yo le hacía decir; pero era igualmente necesario que se tratase de una criatura monstruosa, pues había que pasar por toda clase de descentramientos, deslizamientos, quebrantamientos y emisiones secretas, que me causaron gran placer. Deleuze, Gilles. Carta a un Crítico Severo en Cressole, Michel. Deleuze, Ed. Universitaires, París, 1973
-<br>6.Rem Koolhaas en la Interview Marathon junto a Hans Ulrich Obrist como parte del proyecto de OMA para el Serpentine Pavillion de 2006. También: Meglomania: Architecture is a very bizarre profession in the sense that it is a poisonous mixture of omnipotence and impotence. It is obviously true that our dreams and fantasies are megalomaniac, and we are doomed to wait passively for occasions where we can realize fragments of that megalomania. En O.M.A; Koolhaas, Rem; Mau, Bruce. S, M, L, XL. The Monacelli Press, 1998.  
- <br>7. «Para el puro todo es puro» – así habla el pueblo. Pero yo os digo: ¡para los cerdos todo se convierte en cerdo! Por ello los fanáticos y los beatos de cabeza colgante, que también llevan colgando hacia abajo el corazón, predican: «el mundo mismo es un monstruo merdoso». Pues todos ellos son de espíritu sucio; y en especial aquellos que no tienen descanso ni reposo si no ven el mundo por detrás, – ¡los trasmundanos! A éstos les digo a la cara, aunque ello no suene de modo agradable: el mundo se asemeja al hombre en que tiene un trasero, – ¡eso es verdad! Hay en el mundo mucha mierda: ¡eso es verdad! ¡Mas no por ello es ya el mundo un monstruo merdoso! Hay sabiduría en el hecho de que muchas cosas en el mundo huelan mal: ¡la náusea misma hace brotar alas y fuerzas que presienten manantiales! Incluso en el mejor hay algo que produce náusea; ¡y el mejor es todavía algo que tiene que ser superado! – ¡Oh hermanos míos, hay mucha sabiduría en el hecho de que exista mucha mierda en el mundo! – Nietzsche, Friedrich. Así Habló Zaratustra. Alianza Editorial. 2014
+<br><br>2.Los dados lanzados una vez son la afirmación del azar, la combinación que forman al caer es la afirmación de la necesidad. La necesidad se afirma en el azar, en el sentido exacto en que el ser se afirma en el devenir y lo uno en lo múltiple. Inútilmente se dirá que, lanzados al azar, los dados no producen necesariamente la combinación victoriosa, el doble seis que trae consigo una nueva tirada. Es cierto, pero sólo en la medida en que el jugador no ha sabido primero afirmar el azar. Porque, así́ como lo uno no suprime ni niega lo múltiple, la necesidad no suprime ni abole el azar. Nietzsche identifica el azar con lo múltiple, con los fragmentos, con los miembros, con el caos: caos de los dados que chocan y se lanzan.  Nietzsche hace del azar una afirmación. <i>Deleuze, Gilles. Nietzsche y la Filosofía. Editorial Anagrama, Barcelona, 1998</i>
+<br><br>3.El arte no empieza con la carne, sino con la casa; por este motivo la arquitectura es la primera de las artes. <i>Deleuze, Gilles y Guattari, Félix. ¿Qué es la Filosofía? Editorial Anagrama, Barcelona, 1997</i>
+<br><br>4.In every modernity and every novelty, you find conformity and creativity; an insipid conformity, but also "a little new music"; something in conformity with the time, but also something untimely—separating the one from the other is the task of those who know how to love, the real destroyers and creators of our day. Good destruction requires love. Deleuze, Gilles. “On Nietzsche and the Image of Thought”. Desert Islands and Other Texts. 1953-1974. Semiotext(e). 2004  
+<br><br>5.(…) el modo de liberarme que utilizaba en aquella época consistía, según creo, en concebir la historia de la filosofía como una especie de sodomía (N. del A.: enculer en el original, buggering en inglés) o, dicho de otra manera, de inmaculada concepción. Me imaginaba acercándome a un autor por la espalda y dejándole embarazado de una criatura que, siendo suya, sería sin embargo monstruosa. Era muy importante que el hijo fuera suyo, pues era preciso que el autor dijese efectivamente todo aquello que yo le hacía decir; pero era igualmente necesario que se tratase de una criatura monstruosa, pues había que pasar por toda clase de descentramientos, deslizamientos, quebrantamientos y emisiones secretas, que me causaron gran placer. <i>Deleuze, Gilles. Carta a un Crítico Severo en Cressole, Michel. Deleuze, Ed. Universitaires, París, 1973</i>
+<br><br>6.Rem Koolhaas en la Interview Marathon junto a Hans Ulrich Obrist como parte del proyecto de OMA para el Serpentine Pavillion de 2006. También: Meglomania: Architecture is a very bizarre profession in the sense that it is a poisonous mixture of omnipotence and impotence. It is obviously true that our dreams and fantasies are megalomaniac, and we are doomed to wait passively for occasions where we can realize fragments of that megalomania. En <i>O.M.A; Koolhaas, Rem; Mau, Bruce. S, M, L, XL. The Monacelli Press, 1998. </i> 
+<br> <br>7. «Para el puro todo es puro» – así habla el pueblo. Pero yo os digo: ¡para los cerdos todo se convierte en cerdo! Por ello los fanáticos y los beatos de cabeza colgante, que también llevan colgando hacia abajo el corazón, predican: «el mundo mismo es un monstruo merdoso». Pues todos ellos son de espíritu sucio; y en especial aquellos que no tienen descanso ni reposo si no ven el mundo por detrás, – ¡los trasmundanos! A éstos les digo a la cara, aunque ello no suene de modo agradable: el mundo se asemeja al hombre en que tiene un trasero, – ¡eso es verdad! Hay en el mundo mucha mierda: ¡eso es verdad! ¡Mas no por ello es ya el mundo un monstruo merdoso! Hay sabiduría en el hecho de que muchas cosas en el mundo huelan mal: ¡la náusea misma hace brotar alas y fuerzas que presienten manantiales! Incluso en el mejor hay algo que produce náusea; ¡y el mejor es todavía algo que tiene que ser superado! – ¡Oh hermanos míos, hay mucha sabiduría en el hecho de que exista mucha mierda en el mundo! <i> Nietzsche, Friedrich. Así Habló Zaratustra. Alianza Editorial. 2014</i>
 </p>
       <br>
         <p>Texto: Manuel Mensa <br>
@@ -467,7 +469,7 @@ Ritmo: Catalina Sfer Salas</p>
       <span class="anchor" ></span>
       <br><br><br><br><br><br><br><br><br><br><br><br>
       <h3>Cute-chitecture</h3>
-      <div class="guia"><p style="text-decoration: underline !important;">Imágenes 1</p><a href="#cute2"><p>Imágenes 2</p></a><a href="#cute3"><p>Imágenes 3</p></a></div>
+      <div class="guia"><p style="text-decoration: underline !important;">Texto</p><a href="#cute2"><p>Cenotafios</p></a><a href="#cute3"><p>Puentes</p></a></div>
       <p>Arquitectura Póstuma</p>
       <!--<br>-->
       <!--<hr>-->
@@ -478,7 +480,7 @@ Ritmo: Catalina Sfer Salas</p>
       <span class="anchor" ></span>
       <br><br><br><br><br><br><br><br><br><br><br><br>
       <h3 style="color:white;">.</h3>
-      <div class="guia"><a href="#cute"><p>Imágenes 1</p></a><p style="text-decoration: underline !important;">Imágenes 2</p><a href="#cute3"><p>Imágenes 3</p></a></div>
+      <div class="guia"><a href="#cute"><p>Texto</p></a><p style="text-decoration: underline !important;">Cenotafios</p><a href="#cute3"><p>Puentes</p></a></div>
       <p>Cenotafios</p>
       <!--<br>-->
       <!--<hr>-->
@@ -513,7 +515,7 @@ Ritmo: Catalina Sfer Salas</p>
       <span class="anchor" ></span>
       <br><br><br><br><br><br><br><br><br><br><br><br>
       <h3 style="color:white;">.</h3>
-      <div class="guia"><a href="#cute"><p>Imágenes 1</p></a><a href="#cute2"><p>Imágenes 2</p></a><p style="text-decoration: underline !important;">Imágenes 3</p></div>
+      <div class="guia"><a href="#cute"><p>Texto</p></a><a href="#cute2"><p>Cenotafios</p></a><p style="text-decoration: underline !important;">Puentes</p></div>
       <p>Puentes</p>
       <!--<br>-->
          <!--<hr>-->
@@ -981,7 +983,7 @@ shaping spatial <u>profusion</u>.</p>
       <span class="anchor" ></span>
       <br><br><br><br><br><br><br><br><br><br><br><br>
       <h3>Edificios Mundo</h3>
-      <div class="guia"><p style="text-decoration: underline !important;">Texto</p><p><a href="#casaERCP2">Dibujos</a></p><p><a href="#casaERCP3">Fotografías x F.S.</a></p></div>
+      <div class="guia"><p style="text-decoration: underline !important;">Texto</p><p><a href="#edificios2">Dibujos</a></p><p><a href="#edificios3">Maquetas</a></p></div>
       <!--<br>-->
       <!--<hr>-->
       <p>Edificios Mundo despliega las capacidades intrínsecas de los edificios públicos urbanos de mediana escala para constituir mun dos que proponen espacios - tiempo alternativos dentro de la ciudad que les da sentido. Interiorizando las lógicas urbanas que los determinan, y sedimentándolas en formas de órdenes materiales, los Edificios Mundo definen espacios de encuentro público capaces de articular una diversidad de formas de vida. Se analizarán casos contemporáneos ejemplares para extraer sistemas estructurales, regímenes de circulación, distribuciones de usos, performances de las envolventes y relaciones contextuales, con el objetivo de proyectar espacios de ocio comunitario. Supliendo el déficit de espacios recreativos públicos cubiertos y semi-cubiertos de la ciudad e integrando usos heterogéneos a escala inter barrial, los Edificios Mundo establecerán sus reglas espaciales internas de modo de propiciar formas colectivas impersonales de agrupación en el futuro parque situ- ado sobre la franja perimetral del Golf Municipal de la Ciudad. Sus cualidades topográficas y paisajísti cas y su tamaño y ubicación tienen el potencial de convertirlo, junto con la infraestructura edilicia adec- uada, en un parque de escala y uso metropolitano paradigmático para la ciudad.
@@ -996,8 +998,7 @@ shaping spatial <u>profusion</u>.</p>
       <span class="anchor" ></span>
       <h3 style="color:white;">.</h3>
       <br><br><br><br><br><br><br><br><br><br><br><br>
-      <div class="guia"><a href="#ametralladora"><p>Texto</p></a><p style="text-decoration: underline !important;">Técnicas</p></div>
-      <!--<br>-->
+     <div class="guia"><p><a href="#edificios">Texto</a></p><p style="text-decoration: underline !important;">Dibujos</p><p><a href="#edificios3">Maqueta</a></p></div>
       <!--<hr>-->
       <br><img class="lazyload" src="assets/img/51_edficios mundo/01/01.jpg" alt="Image 1">
        <img class="lazyload" src="assets/img/51_edficios mundo/01/02.jpg" alt="Image 1">
@@ -1016,7 +1017,7 @@ shaping spatial <u>profusion</u>.</p>
       <span class="anchor" ></span>
       <h3 style="color:white;">.</h3>
       <br><br><br><br><br><br><br><br><br><br><br><br>
-      <div class="guia"><a href="#ametralladora"><p>Texto</p></a><p style="text-decoration: underline !important;">Técnicas</p></div>
+      <div class="guia"><p><a href="#edificios">Texto</a></p><p><a href="#edificios2">Dibujos</a></p><p style="text-decoration: underline !important;">Maquetas</p></div>
       <!--<br>-->
       <!--<hr>-->
       <br><img class="lazyload" src="assets/img/51_edficios mundo/02/01.jpg" alt="Image 1">
@@ -1348,7 +1349,7 @@ En la cultura arquitectónica actual, donde todo posicionamiento afirmativo ráp
       <span class="anchor" ></span>
       <br><br><br><br><br><br><br><br><br><br><br><br>
       <h3>Oswald Mathias Ungers es Igual a Uno</h3>
-      <div class="guia"><p style="text-decoration: underline !important;">Texto</p><p><a href="#casaERCP2">Dibujos</a></p><p><a href="#casaERCP3">Fotografías x F.S.</a></p></div>
+      <div class="guia"><p style="text-decoration: underline !important;">Texto</p><p><a href="#omu">Dibujos</a></p><p><a href="#omu2">Maquetas</a></p></div>
       <!--<br>-->
       <!--<hr>-->
       <p>Todo proyecto de arquitectura
