240825_css_EN.html

--- a/public/index_EN.html
+++ b/public/index_EN.html
@@ -140,10 +140,16 @@ document.getElementById('slideForwardBottom').addEventListener('mouseleave', sto
       <p style="margin-bottom: -10px"><a href="#personajismo">Personaeism</a></p> <!--<br> <a href="#personajismo">Del Arquitecto-Estrella al Arquitecto-Constelación</a>-->
       <p style="margin-bottom: -10px"><a href="#MPV">Walls, Doors, and Holes </a></p><!--<br>  <a href="#MPV"> Hacia un Minimalismo Explosivo</a>-->
       <p style="margin-bottom: -10px"><a href="#mothership">MothershipTheatre </a></p> <!--<br> <a href="#mothership"> Thesis for an Opaque Architecture</a> <br><a href="#mothership2"> Imágenes </a> <br><a href="#mothership3"> Videos </a>  -->
+       <p style="margin-bottom: -10px"><a href="#edificios">Edificios Mundo </a></p> <!--<br> <a href="#mothership"> Thesis for an Opaque Architecture</a> <br><a href="#mothership2"> Imágenes </a> <br><a href="#mothership3"> Videos </a>  -->
       <p style="margin-bottom: -10px"><a href="#sinEstado">Stateless Architecture </a></p> <!--<br>  <a href="#sinEstado">  Albergues para Multitudes</a> <br><a href="#sinEstado2"> Multitudes en Movimiento </a> <br><a href="#sinEstado3"> Modelos </a> <br><a href="#sinEstado4"> Dibujos </a> -->
       <p style="margin-bottom: -10px"><a href="#singular">Singular 00 </a></p><!--<br> <a href="#singular"> Proposición</a>-->
       <p style="margin-bottom: -10px"><a href="#vanguardia">Avant-Gardes or Nothing </a> <!-- <br><a href="#vanguardia"> Manifiestos a Priori</a><br><a href="#vanguardia2"> Manifiestos Prospectivos </a>-->
-      <p style="margin-bottom: -10px"><a href="#ametralladora">Utopia Machine Gun </a></p><!-- <a href="#ametralladora"> <br> Texto</a><br><a href="#ametralladora2"> Técnicas</a>      -->
+       <p style="margin-bottom: -10px"><a href="#omu">Oswald Mathias Ungers Equals One</a></p> <!--<br> <a href="#mothership"> Thesis for an Opaque Architecture</a> <br><a href="#mothership2"> Imágenes </a> <br><a href="#mothership3"> Videos </a>  -->
+      <p style="margin-bottom: -10px"><a href="#ultimate">The House of the Ultimate Archetype</a></p> <!--<br> <a href="#mothership"> Thesis for an Opaque Architecture</a> <br><a href="#mothership2"> Imágenes </a> <br><a href="#mothership3"> Videos </a>  -->
+     <p style="margin-bottom: -10px"><a href="#ametralladora">Utopia Machine Gun </a></p><!-- <a href="#ametralladora"> <br> Texto</a><br><a href="#ametralladora2"> Técnicas</a>      -->
+       <p style="margin-bottom: -10px"><a href="#vicios">Vicious Functionalisms </a></p><!-- <a href="#ametralladora"> <br> Texto</a><br><a href="#ametralladora2"> Técnicas</a>      -->
+      <p style="margin-bottom: -10px"><a href="#imperio">The Empire of Architectural Values </a></p><!-- <a href="#ametralladora"> <br> Texto</a><br><a href="#ametralladora2"> Técnicas</a>      -->
+      <p style="margin-bottom: -10px"><a href="#masas">Masas Finas </a></p><!-- <a href="#ametralladora"> <br> Texto</a><br><a href="#ametralladora2"> Técnicas</a>      -->
       <p style="margin-bottom: -10px"><a href="#noche">Spending the Night Together </a></p><!-- <a href="#noche"> <br> Texto</a><br><a href="#noche2"> Entrevistas </a>-->
       <p style="margin-bottom: -10px"><a href="#estados">States of Architecture</a></p><!-- <a href="#estados"> <br> Seis Alegorías</a> <a href="#estados2"> Imágenes</a>-->
       <p style="margin-bottom: -10px"><a href="#militancia">Agrupación Militancia Arquitectura </a></p><!-- <a href="#militancia"> <br> Fanzine 2013</a> -->
