--- a/public/index_EN.html
+++ b/public/index_EN.html
@@ -126,7 +126,7 @@ document.getElementById('slideForwardBottom').addEventListener('mouseleave', sto
       <p style="margin-bottom: -13px">Buenos Aires, Argentina</p>
       <p style="margin-bottom: 110px"><a href="/">ES  </a><a style="font-weight: bold !important;" href="/index_EN.html">  EN</a></p>
       <!--<br>-->
-      <h3>Índice</h3>
+      <h3>Index</h3>
       <p style="margin-bottom: -10px"><a href="#matters">Matters of Fact </a></p><!--<br> <a href="#matters"> El Inevitable Sufrimiento de la Arquitectura</a>-->
       <p style="margin-bottom: -10px"><a href="#casaERCP">Drapes</a></p><!-- <br> <a href="#casaERCP"> Texto </a><br><a href="#casaERCP2"> Dibujos </a> <br><a href="#casaERCP3"> Fotografías x F.S. </a>-->
       <p style="margin-bottom: -10px"><a href="#casaJBRC">Tanker</a></p><!--<br> <a href="#casaJBRC"> Texto </a><br><a href="#casaJBRC2"> Dibujos </a><br><a href="#casaJBRC3">Fotografías x S.G. </a> <br><a href="#casaJBRC4"> Series</a>-->
@@ -261,7 +261,7 @@ Published in: <i>Plot 69 (Buenos Aires, 2023)</i> and in <i>Universidad Torcuato
       <span class="anchor" ></span>
       <h3 style="color:white;">.</h3>
       <br><br><br><br><br><br><br><br><br><br><br><br>
-      <div class="guia"><p><a href="#casaERCP">Texto</a></p><p><a href="#casaERCP2">Dibujos</a></p><p style="text-decoration: underline !important;">Fotografías x F.S.</p></div>
+      <div class="guia"><p><a href="#casaERCP">Text</a></p><p><a href="#casaERCP2">Plans</a></p><p style="text-decoration: underline !important;">Photography x F.S.</p></div>
       <!--<br>-->
       <!--<hr>-->
       <img loading="lazy" src="assets/img/03_avalos 2172_fotos/01.jpg" alt="Image 1">
