--- a/public/index_EN.html
+++ b/public/index_EN.html
@@ -975,14 +975,14 @@ shaping spatial <u>profusion</u>.</p>
       <div id="edificios" class="column" onmousedown="startScrolling(this)" onmouseup="stopScrolling()" onmouseleave="stopScrolling()">
       <span class="anchor" ></span>
       <br><br><br><br><br><br><br><br><br><br><br><br>
-      <h3>Edificios Mundo</h3>
+      <h3>World Structures</h3>
       <div class="guia"><p style="text-decoration: underline !important;">Text</p><p><a href="#edificios2">Drawings</a></p><p><a href="#edificios3">Models</a></p></div>
       <!--<br>-->
       <!--<hr>-->
-      <p>Edificios Mundo despliega las capacidades intrínsecas de los edificios públicos urbanos de mediana escala para constituir mun dos que proponen espacios - tiempo alternativos dentro de la ciudad que les da sentido. Interiorizando las lógicas urbanas que los determinan, y sedimentándolas en formas de órdenes materiales, los Edificios Mundo definen espacios de encuentro público capaces de articular una diversidad de formas de vida. Se analizarán casos contemporáneos ejemplares para extraer sistemas estructurales, regímenes de circulación, distribuciones de usos, performances de las envolventes y relaciones contextuales, con el objetivo de proyectar espacios de ocio comunitario. Supliendo el déficit de espacios recreativos públicos cubiertos y semi-cubiertos de la ciudad e integrando usos heterogéneos a escala inter barrial, los Edificios Mundo establecerán sus reglas espaciales internas de modo de propiciar formas colectivas impersonales de agrupación en el futuro parque situ- ado sobre la franja perimetral del Golf Municipal de la Ciudad. Sus cualidades topográficas y paisajísti cas y su tamaño y ubicación tienen el potencial de convertirlo, junto con la infraestructura edilicia adec- uada, en un parque de escala y uso metropolitano paradigmático para la ciudad.
+      <p>World Structures unfolds the intrinsic capabilities of medium-scale urban public buildings to create nodes that offer alternative spaces and times within the city that give them meaning. By internalizing the urban logics that determine them and sedimenting them into forms of material orders, World Structures define public meeting spaces capable of articulating a diversity of ways of life. Exemplary contemporary cases will be analyzed to extract structural systems, circulation regimes, usage distributions, envelope performances, and contextual relationships, with the goal of designing community leisure spaces. Addressing the deficit of covered and semi-covered recreational public spaces in the city and integrating heterogeneous uses at an inter-neighborhood scale, World Structures will establish their internal spatial rules to foster collective, impersonal forms of gathering in the future park located on the peripheral strip of the Municipal Golf Course of the City. Its topographical and landscape qualities, along with its size and location, have the potential to transform it, along with the appropriate building infrastructure, into a paradigm metropolitan park for the city.
         <br>
-      <p>Profesores: Manuel Mensa, Máximo Sanchez Granel
-        <br> Alumnos: Martín Achinelli, Gerónimo Amado Cattaneo, Milagros Ines Ares, Jorge Alejandro Barja Añez, Tiago Buceta, Luciano Nicolás Cichanowski, Iván Santiago Corach, Julia Delbes, Martina Kase, Joaquín Khoury, Valentina Luján Maldonado, Facundo Nahuel Manfredi Ortiz, Julieta Miguel, Francesca Moretti, Valentina Sofía Puente, Sofía Ramos, Lola Sadovsky, Chiara Luján Scaglione, José Luis Augusto Silva Teixeira, Lucia Tahmazian Hopson, Trinidad Ticinese, Tomás Vazquez Gonzalez, Pedro Zapata
+      <p>Professors: Manuel Mensa, Máximo Sanchez Granel
+        <br> Students: Martín Achinelli, Gerónimo Amado Cattaneo, Milagros Ines Ares, Jorge Alejandro Barja Añez, Tiago Buceta, Luciano Nicolás Cichanowski, Iván Santiago Corach, Julia Delbes, Martina Kase, Joaquín Khoury, Valentina Luján Maldonado, Facundo Nahuel Manfredi Ortiz, Julieta Miguel, Francesca Moretti, Valentina Sofía Puente, Sofía Ramos, Lola Sadovsky, Chiara Luján Scaglione, José Luis Augusto Silva Teixeira, Lucia Tahmazian Hopson, Trinidad Ticinese, Tomás Vazquez Gonzalez, Pedro Zapata
         <br>Di Tella Arquitectura, 2023</p>
       
       <!-- Add more content here if needed -->
@@ -1619,7 +1619,7 @@ Gilles Deleuze, Difference and Repetition, p.246</i>
      <div id="masas" class="column" onmousedown="startScrolling(this)" onmouseup="stopScrolling()" onmouseleave="stopScrolling()">
       <span class="anchor" ></span>
       <br><br><br><br><br><br><br><br><br><br><br><br>
-      <h3>Masas Finas</h3>
+      <h3>Refined Masses</h3>
       <div class="guia"><p style="text-decoration: underline !important;">Text</p><p><a href="#masas2">Drawings</a></p><p><a href="#masas3">Images</a></p></div>
       <!--<br>-->
       <!--<hr>-->
