--- a/public/index.html
+++ b/public/index.html
@@ -1693,6 +1693,23 @@ Gilles Deleuze, Difference and Repetition, p.246</i>
      
       <!-- Add more content here if needed -->
     </div>
+    <div id="masas3" class="column" onmousedown="startScrolling(this)" onmouseup="stopScrolling()" onmouseleave="stopScrolling()">
+      <span class="anchor" ></span>
+      <h3 style="color:white;">.</h3>
+      <br><br><br><br><br><br><br><br><br><br><br><br>
+      <div class="guia"><p><a href="#masas">Texto</a></p><p><a href="#masas2">Dibujos</a></p><p style="text-decoration: underline !important;">Imágenes</p></div>
+      <!--<br>-->
+      <!--<hr>-->
+      <br><img class="lazyload" src="assets/img/50_masas/31.jpg" alt="Image 1">
+       <img class="lazyload" src="assets/img/50_masas/32.jpg" alt="Image 1">
+       <img class="lazyload" src="assets/img/50_masas/33.jpg" alt="Image 1">
+       <img class="lazyload" src="assets/img/50_masas/34.jpg" alt="Image 1">
+       <img class="lazyload" src="assets/img/50_masas/35.jpg" alt="Image 1">
+       <img class="lazyload" src="assets/img/50_masas/36.jpg" alt="Image 1">
+       <img class="lazyload" src="assets/img/50_masas/37.jpg" alt="Image 1">
+    
+      <!-- Add more content here if needed -->
+    </div>
       <div class="gap" ontouchstart="handleTouchStart(this, event)" ontouchmove="handleTouchMove(this, event)">
       <span class="anchor"></span>
       <h3 style="color:white;">.</h3>
