--- a/public/index_EN.html
+++ b/public/index_EN.html
@@ -2452,6 +2452,63 @@ Today the world's population lives in cities. All architecture must deal with th
       <p style="color:white;">.</p>
     </div>
     
+    
+    <div  id="never" class="column" onmousedown="startScrolling(this)" onmouseup="stopScrolling()" onmouseleave="stopScrolling()">
+      <span class="anchor" ></span>
+      <br><br><br><br><br><br><br><br><br><br><br><br>
+      <h3>Logic Of Sensation</h3>
+      <!--<p>(Respeto por las Cosas como Son)</p>-->
+      <!--<br>-->
+      <!--<hr>-->
+      <p><b>01:The Round Area, The Ring</b></p>
+      <img loading="lazy" src="assets/img/52_deleuze/01.jpg" alt="Image 1">
+      <p><b>02:Note on Figuration in Past Painting</b></p>
+      <img loading="lazy" src="assets/img/52_deleuze/02.jpg" alt="Image 1">
+      <p><b>03:Athleticism
+        <br> 
+        03.01 From the Material Structure to the Figure</b></p>
+      <img loading="lazy" src="assets/img/52_deleuze/03.jpg" alt="Image 1">
+      <p><b>03: Athleticism
+<br> 
+        03.02 From the Figure to the Material Structure</b></p>
+      <img loading="lazy" src="assets/img/52_deleuze/04.jpg" alt="Image 1">
+      <p><b>04: Body, Meat and Spirit, Becoming-Animal</b></p>
+      <img loading="lazy" src="assets/img/52_deleuze/05.jpg" alt="Image 1">
+      <p><b>05: Recapitulative Note: Bacon ́s Periods and Aspects</b></p>
+      <img loading="lazy" src="assets/img/52_deleuze/06.jpg" alt="Image 1">
+      <p><b>06: Painting and Sensation</b></p>
+      <img loading="lazy" src="assets/img/52_deleuze/07.jpg" alt="Image 1">
+      <p><b>07: Hysteria</b></p>
+      <img loading="lazy" src="assets/img/52_deleuze/08.jpg" alt="Image 1">
+      <p><b>08: Capturing Forces</b></p>
+      <img loading="lazy" src="assets/img/52_deleuze/09.jpg" alt="Image 1">
+      <p><b>09: Couples and Tryptichs</b></p> 
+      <img loading="lazy" src="assets/img/52_deleuze/10.jpg" alt="Image 1">
+      <p><b>10: Note: What is a Tryptich?</b></p>
+      <img loading="lazy" src="assets/img/52_deleuze/11.jpg" alt="Image 1">
+      <p><b>11: The Painting Before Painting...</b></p>
+      <img loading="lazy" src="assets/img/52_deleuze/12.jpg" alt="Image 1">
+      <p><b>12: The Diagram</b></p>
+      <img loading="lazy" src="assets/img/52_deleuze/13.jpg" alt="Image 1">
+      <p><b>13: Analogy</b></p>
+      <img loading="lazy" src="assets/img/52_deleuze/14.jpg" alt="Image 1">
+      <p><b>14: Every Painter Recapitulates the History of Painting in His or Her Own Way</b></p>
+      <img loading="lazy" src="assets/img/52_deleuze/15.jpg" alt="Image 1">
+      <p><b>15: Bacon ́s Path</b></p>
+      <img loading="lazy" src="assets/img/52_deleuze/16.jpg" alt="Image 1">
+      <p><b>Chapter 16: Note on Color</b></p>
+      <img loading="lazy" src="assets/img/52_deleuze/17.jpg" alt="Image 1">
+      <p><b>Chapter 17: The Eye and the Hand</b></p>
+      <img loading="lazy" src="assets/img/52_deleuze/18.jpg" alt="Image 1">
+
+      <p>Project: Manuel Mensa, Catalina Sfer Salas </p>
+      <!-- Add more content here if needed -->
+    </div>
+    <div class="gap" ontouchstart="handleTouchStart(this, event)" ontouchmove="handleTouchMove(this, event)">
+      <span class="anchor"></span>
+      <h3 style="color:white;">.</h3>
+      <p style="color:white;">.</p>
+    </div>
     <div id="estudio" class="column" onmousedown="startScrolling(this)" onmouseup="stopScrolling()" onmouseleave="stopScrolling()">
       <span class="anchor" ></span>
       <br><br><br><br><br><br><br><br><br><br><br><br>
