--- a/public/index_EN.html
+++ b/public/index_EN.html
@@ -1678,8 +1678,8 @@ Gilles Deleuze, Difference and Repetition, p.246</i>
       <br><img class="lazyload" src="assets/img/50_masas/31.jpg" alt="Image 1">
        <img class="lazyload" src="assets/img/50_masas/32.jpg" alt="Image 1">
        <img class="lazyload" src="assets/img/50_masas/33.jpg" alt="Image 1">
-       <img class="lazyload" src="assets/img/50_masas/34.jpg" alt="Image 1">
-       <img class="lazyload" src="assets/img/50_masas/35.jpg" alt="Image 1">
+       <img class="lazyload" src="assets/img/50_masas/34.png" alt="Image 1">
+       <img class="lazyload" src="assets/img/50_masas/35.png" alt="Image 1">
        <img class="lazyload" src="assets/img/50_masas/36.jpg" alt="Image 1">
        <img class="lazyload" src="assets/img/50_masas/37.jpg" alt="Image 1">
     
