--- a/public/index.html
+++ b/public/index.html
@@ -2488,7 +2488,7 @@ Práctica de lo Irreductible (Archivos de Arquitectura, 2022) y Atlas de Arquite
 (Archivos de Arquitectura, 2022).</p>
        <br>
        <br>
-       <p>Equipo: Manuel Mensa, Nicolás Boscoboinik</p>
+       <p>Equipo: Manuel Mensa, Pedro Huberman</p>
       <!-- Add more content here if needed -->
     </div>
     
