--- a/public/index.html
+++ b/public/index.html
@@ -2424,6 +2424,8 @@ In El Greco's The Burial of the Count of Orgaz, a horizontal divides the paintin
 <br>Figures refer to an existing code of the church that liberates them.
 <br>They are doubled over, liberated, freed, lifted up. They only have celestial sensations. They belong to fantasy. In Giotto's Stigmatization of St. Francis, figuration traces lines towards a Figure in the sky.
 <br>In Tintoretto's Creation of the Animals, Figures run a race that separates them from f.</p>
+      <br>
+      <br>
       <p><b>03:Athleticism
         <br> 
         03.01 From the Material Structure to the Figure</b></p>
@@ -2512,21 +2514,110 @@ allotropic variations.
       <br>
       <br>
       <p><b>10: Note: What is a Tryptich?</b></p>
-      <img loading="lazy" src="assets/img/52_deleuze/11.jpg" alt="Image 1">
+      <p>There are many explicit attendants in the triptychs.
+<br>The visible attendant gives way to the rhythmic attendant when the function is passed on to it.
+<br>The attendant-function circulates throughout the painting.
+<br>The horizontal defines the attendant rhythm that is retrogradable in itself.
+<br>The visible attendant turns into an active rhythm or a passive rhythm.
+<br>The two rythms are retrogradable and distributed.
+<br>The fall is the active rythm. The opposable character will assume the role of the passive rhythm Sensation is experienced through the fall. The fall exists to affirm the difference in level of vertical variation as such.
+<br>The attendant-function can refer to a superficial figurational (in the first sense)attendant and see or to a more profound figural (in the second sense) attendant , that does not see.</p>
+  <br>
+      <br>
       <p><b>11: The Painting Before Painting...</b></p>
-      <img loading="lazy" src="assets/img/52_deleuze/12.jpg" alt="Image 1">
+      <p>A probable visual whole is disorganized into the improbable visual Figure in the pictorial act. There is a first, prepictorial figuration in the probable visual whole.
+<br>It cannot be completely eliminated; something of it is always conserved.
+<br>There is a second figuration, the one that the painter obtains.
+<br>These two figurations do not have the same nature.
+<br>The painter will use free manual traits to make the visual image of the Figure emerge through a deformation in place. It is manipulated chance.
+<br>The pure presence of the Figure is indeed the reconstitution of a representation, the recreation of a figuration or of a first resemblance or convention.
+<br>There is an entire order of equal and unequal probabilities and figurative givens or clichés on the canvas.</p>
       <p><b>12: The Diagram</b></p>
-      <img loading="lazy" src="assets/img/52_deleuze/13.jpg" alt="Image 1">
+      <p>There are three modern paths of painting: abstraction, abstract expressionism and the one of the diagram, that is Bacon ́s path.
+<br>Abstraction replaced the diagram with a code.
+<br>In abstract expressionism the abyss or chaos is deployed to the maximum, so the diagram merges with the totality of the painting.
+<br>Abstraction reduces chaos to the minimum. It raises itself above the figurative givens.
+<br>In abstract expressionism, optical geometry disappears in favor of a manual line.
+<br>In abstraction, the abstract forms are part of a new and purely optical space that has no need of the tactile connections.
+<br>The diagram is the operative set of reinjected lines and zones, line-strokes and color-patches into a Figure. It is a chaos and a germ of order or rhythm.
+<br>For Bacon the diagram must remain limited in space and time.
+<br>Not all the figurative givens have to disappear. A new figuration should emerge from the catastrophe.
+<br>The diagram has to make a precise sensation and a rigorous contour. It gives them power of vibration and nonlocalization.</p>
+    <br>
+      <br>
       <p><b>13: Analogy</b></p>
-      <img loading="lazy" src="assets/img/52_deleuze/14.jpg" alt="Image 1">
+      <p>Abstract painting proceeds by code and program.
+<br>Abstract expresionism proceeds by analogy and resemblance.
+<br>In aesthetic analogy there is neither primary resemblance nor prior code, but analogical language.
+<br>By extending the diagram to the entire painting, analogy takes the diagram for the analogical flux itself.
+<br>The diagram acts as a modulator. It breaks all the figurative coordinates and defines possibilities of fact.
+<br>Aesthetic analogy is both nonfigurative and noncodified.
+<br>Analogical flux passes through the diagram and starts a triple liberation of the planes, colors and bodies.
+<br>Lines and colors are then able to constitute the Figure or the Fact, that is, to produce the new resemblance inside the visual whole, where the diagram must operate and be realized.
+<br>A digital code covers certain forms of similitude or analogy: analogy by isomorphism, an internalised one or an intrinsic one. When analogy is independent of every code, one can still distinguish two forms of it: resemblance as a product or a a producer. Resemblance is the producer when the relations between the elements of one thing pass directly into the elements of another thing, which then becomes the image of the first. This is a figurative analogy.
+<br>Resemblance is the product when it appears abruptly as the result of relations that are completely different from those it is supposed to reproduce by liberating lines for the armature and colors for modulation. In this last type of analogy, a sensible resemblance is produced, but instead of being produced symbolically, through the detour of the code, it is produced "sensually," through sensation. This last one is an aesthetic analogy as well.</p>
+   <br>
+      <br>
       <p><b>14: Every Painter Recapitulates the History of Painting in His or Her Own Way</b></p>
-      <img loading="lazy" src="assets/img/52_deleuze/15.jpg" alt="Image 1">
+      <p>Color itself is capable of two very different kinds of relations: relations of value and relations of tonality.
+        <br>Relations of value escape from the danger of storytelling in a pure code.
+ <br>Relations of tonality move closer to the pure state of a pictorial fact which has nothing left to narrate. They are the analogical language of painting.
+ <br>Within sight, haptic space is defined by the relative opposition of warm and cool.
+ <br>Within sight, optic space is defined by the opposition of light and dark.
+ <br>Warm and cool attest eccentric or concentric movement of expansion or contraction.
+ <br>Bright and dark attest an aspiration to movement.
+ <br>In the relations of tonality, there is neither an inside nor an ouside, but a continuous creation of space. Modulation belongs to this temporal, variable and continuous mold.
+ <br>Volume is reached through the arrangement of colors.</p>
+       <br>
+       <br>
       <p><b>15: Bacon ́s Path</b></p>
-      <img loading="lazy" src="assets/img/52_deleuze/16.jpg" alt="Image 1">
+      <p>The manual diagram must be reinjected into the visual whole, where it introduces a properly haptic world and gives the eye a haptic function.
+<br>It sweeps out the pure optical and the optical-tactile world and forces the eye to confront manual power.
+<br>It produces an irruption like a scrambled or cleaned zone and forms an absolute zone of indiscernibility.
+<br>If there is still an eye, it is the "eye" of a hurricane. It has an unbridled manual power.
+<br>This appears as chance, accident, automatism, or the involuntary.
+<br>It is color that forms this haptic world with relations of warm and cool, expansion and contraction.
+<br>The diagram acts as a modulator of color. Time and space result from color.
+<br>Time does it as flows where time passes and as shores of eternity of time.
+<br>The first one, in the chromatic variation of the broken tones that compose the flesh; and the second one in the monochromy of the field.
+<br>Space does it as bright and broken colors. The tone of the field seizes upon color as a passage with little variations of saturation. The body ́s volume is rendered by one or more broken tones, by mixing complementary colors in critical proportion..
+<br>In Bacon, the broken tones produce the body of the Figure, and the bright or pure tones, the armature of the fields.
+<br>This treatment of color has its own dangers and its possible catastrophe, without which there would be no painting.
+<br>The first danger, is that the ground would remain indifferent and inert, with an abstract and coagulated brightness.
+<br>Another danger is that the broken tones of the Figure would be allowed to blend together and become scrambled,losing their clarity and lapsing into a monotonous gray.</p>
+      <br>
+      <br>
       <p><b>Chapter 16: Note on Color</b></p>
-      <img loading="lazy" src="assets/img/52_deleuze/17.jpg" alt="Image 1">
+      <p>Bacon ́s three elements of painting: Figure, Material Structure and contour converge and communicate in color. The relations between colors explain the unity of the whole, the distribution of each element, and the way each of them acts upon the others.
+<br> Colorism consists of regimes of colors and the relations between these regimes.
+<br> Color attains different regimes in the Figure and in the Material Structure for Bacon.
+<br> It is color that creates the line and the contour. The contour is a colored pressure that ensures the Figure's balance.
+<br> It makes one regime of color pass into another.
+<br> In the regime of the Figure, we find ourselves before flows of color, in the form of broken tones. The broken tones constitute the flesh of the Figures. The flow traces millimetrical variations in the body as the content of time.
+<br> In the MS, the monochromatic shores were raised to a kind of eternity as the form of time. Pure dominant bright color constitute the fields.
+<br> Each dominant color and each broken tone are assured proximity by the contour.
+<br> They indicate the immediate exercise of a force on the corresponding zone of the body or head, immediately rendering a force visible.
+<br> With the diagram as the point of application of forces, the flow enters into relations of proximity.
+<br> This proximity can certainly be spatial, but it can also be topological and act at a distance.
+<br> The internal variation of intensity or saturation of the field was defined in terms of proximity to this or that zone.</p>
+      <br> 
+      <br> 
       <p><b>Chapter 17: The Eye and the Hand</b></p>
-      <img loading="lazy" src="assets/img/52_deleuze/18.jpg" alt="Image 1">
+      <p>The ideal optical space grasp its forms through an optical code. Figuration is a consequence of the tactile-optical space.
+<br> The manual diagram disrupts this space and its consequences in a catastrophe or an accident. A form of a completely different nature emerges from it, called the Figure.
+<br> The diagram imposes a zone of objective indiscernibility or indeterminability between two forms.
+<br> One of the forms was no longer, and the other, not yet.
+<br> It destroys the figuration of the first and neutralizes that of the second.
+<br> In the diagram, figurative lines will be scrambled by extending them and hatching them.
+<br> Everything can be done inside the same form.
+<br> New relations emerge out of the broken tones of coloring gray.
+<br> These produce a more profound resemblance.
+<br> Being manual, it must be continuously reinjected into the visual whole, in which it deploys consequences that go beyond it.
+<br> ln a colorist formula, the diagram-accident imposes nonformal color-patches and traits that function only as traits of animality. The diagram introduces formless forces, making us pass from one form to another.
+<br> There is indeed a change of form, but the change of form is a deformation.
+<br> Substitution of the form by completely different relations create an aesthetic analogue of the form.
+<br> The pictorial fact that has come from the hand, is the formation of a third eye, a haptic vision of the eye.
+<br> It is as if the duality of the tactile and the optical were surpassed visually in this haptic function born of the diagram.</p>
 
       <p>Proyecto: Manuel Mensa, Catalina Sfer Salas </p>
       <!-- Add more content here if needed -->
