--- a/public/index_EN.html
+++ b/public/index_EN.html
@@ -2646,7 +2646,7 @@ allotropic variations.
 <br>Another danger is that the broken tones of the Figure would be allowed to blend together and become scrambled,losing their clarity and lapsing into a monotonous gray.</p>
       <br>
       <br>
-      <p><b>Chapter 16: Note on Color</b></p>
+      <p><b>16: Note on Color</b></p>
       <p>Bacon ́s three elements of painting: Figure, Material Structure and contour converge and communicate in color. The relations between colors explain the unity of the whole, the distribution of each element, and the way each of them acts upon the others.
 <br> Colorism consists of regimes of colors and the relations between these regimes.
 <br> Color attains different regimes in the Figure and in the Material Structure for Bacon.
@@ -2661,7 +2661,7 @@ allotropic variations.
 <br> The internal variation of intensity or saturation of the field was defined in terms of proximity to this or that zone.</p>
       <br> 
       <br> 
-      <p><b>Chapter 17: The Eye and the Hand</b></p>
+      <p><b>17: The Eye and the Hand</b></p>
       <p>The ideal optical space grasp its forms through an optical code. Figuration is a consequence of the tactile-optical space.
 <br> The manual diagram disrupts this space and its consequences in a catastrophe or an accident. A form of a completely different nature emerges from it, called the Figure.
 <br> The diagram imposes a zone of objective indiscernibility or indeterminability between two forms.
