--- a/public/index_EN.html
+++ b/public/index_EN.html
@@ -164,7 +164,7 @@ document.getElementById('slideForwardBottom').addEventListener('mouseleave', sto
       <p style="margin-bottom: -10px"><a href="#laberinto">Labyrinth </a></p><!-- <a href="#laberinto"> <br>Texto</a> <br><a href="#laberinto2"> Dibujos</a> <br><a href="#laberinto3"> Imágenes</a>-->
       <p style="margin-bottom: -10px"><a href="#invisibles">Invisible Geometries </a></p><!-- <a href="#invisibles"><br>Texto</a> <br><a href="#invisibles2"> Imágenes</a> -->
       <p style="margin-bottom: -10px"><a href="#mundo">Today the World</a></p><!-- <br> <a href="#mundo"> Circular #02. Arquitectura, Arquitectura, Arquitectura</a>-->
-      <p style="margin-bottom: -10px"><a href="#deleuze">Logic of Sensation </a></p><!-- <br> <a href="#mundo"> Circular #02. Arquitectura, Arquitectura, Arquitectura</a>-->
+      <p style="margin-bottom: -10px"><a href="#deleuze">Logic of Sensation. Gilles Deleuze </a></p><!-- <br> <a href="#mundo"> Circular #02. Arquitectura, Arquitectura, Arquitectura</a>-->
       <p style="margin-bottom: -10px"><a href="#estudio">Office </a></p><!--  <a href="#estudio"><br>Texto</a> <br><a href="#estudio2"> Oficina </a>-->
       <p style="margin-bottom: -10px"><a href="#web">Website</a></p><!-- <a href="#web"><br>Tapiz</a>-->
     </div>
