--- a/public/index.html
+++ b/public/index.html
@@ -1485,7 +1485,9 @@ de ocho salas, mientras que su interior está fragmentado en nueve claustros de 
       <div class="guia"><a href="#ametralladora"><p>Texto</p></a><p style="text-decoration: underline !important;">Técnicas</p></div>
       <!--<br>-->
       <!--<hr>-->
-      <br><img class="lazyload" src="assets/img/28_utopia machine gun/01.jpg" alt="Image 1">
+      <br><img class="lazyload" src="assets/img/28_utopia machine gun/25.jpg" alt="Image 1">
+      <img class="lazyload" src="assets/img/28_utopia machine gun/26.jpg" alt="Image 1">
+      <img class="lazyload" src="assets/img/28_utopia machine gun/01.jpg" alt="Image 1">
       <img loading="lazy" src="assets/img/28_utopia machine gun/02.jpg" alt="Image 1">
       <img loading="lazy" src="assets/img/28_utopia machine gun/03.jpg" alt="Image 1">
       <img loading="lazy" src="assets/img/28_utopia machine gun/04.jpg" alt="Image 1">
