--- a/public/index_EN.html
+++ b/public/index_EN.html
@@ -1467,7 +1467,9 @@ In today's architectural culture, where any affirmative position quickly crystal
       <div class="guia"><a href="#ametralladora"><p>Text</p></a><p style="text-decoration: underline !important;">Techniques</p></div>
       <!--<br>-->
       <!--<hr>-->
-      <br><img class="lazyload" src="assets/img/28_utopia machine gun/01.jpg" alt="Image 1">
+      <br><img class="lazyload" src="assets/img/28_utopia machine gun/25.jpg" alt="Image 1">
+      <img class="lazyload" src="assets/img/28_utopia machine gun/26.jpg" alt="Image 1">
+      <img class="lazyload" src="assets/img/28_utopia machine gun/01.jpg" alt="Image 1">
       <img loading="lazy" src="assets/img/28_utopia machine gun/02.jpg" alt="Image 1">
       <img loading="lazy" src="assets/img/28_utopia machine gun/03.jpg" alt="Image 1">
       <img loading="lazy" src="assets/img/28_utopia machine gun/04.jpg" alt="Image 1">
